--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ping-lite",
-  "version": "1.0.2",
+  "version": "2.0.0",
   "description": "A very simple ping wrapper",
   "keywords": [
     "ping",
@@ -18,13 +18,11 @@
     "type": "git",
     "url": "git://github.com/ben-bradley/ping-lite"
   },
-  "dependencies": {
-  },
+  "dependencies": {},
   "devDependencies": {
     "mocha": "*"
   },
-  "browser": {
-  },
+  "browser": {},
   "main": "ping-lite.js",
   "engines": {
     "node": "*"
